@@ -1,5 +1,9 @@
 2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Data/Shapefile/DBaseIIIFile.cs: properly handle logical booleans
+
+2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
+
 	* Data/Shapefile/DBaseIIIFile.cs: allow null values in dbf
 
 2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
